--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,27 +6,43 @@
 
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    :root {
+        --background: #0a0a0a;
+        --foreground: #ededed;
+    }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: 'Vazirmatn', Arial, Helvetica, sans-serif; /* Updated font-family */
+    color: var(--foreground);
+    background: var(--background);
+    font-family: 'Vazirmatn', Helvetica, Arial, sans-serif; /* Updated font-family */
+}
+
+pre{
+    font-family: 'Vazirmatn', Helvetica, Arial, sans-serif; /* Updated font-family */
+
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    .text-balance {
+        text-wrap: balance;
+    }
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 
